force-app/main/default/objects/Interaction__c/Interaction__c.object-meta.xml
<CustomObject>
    <description>Interaction Log and Staging Object</description>
    <label>Interaction</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000000}</displayFormat>
        <label>Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>