force-app/main/default/objects/Interaction__c/fields/Additional_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Additional_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The secondary campaign (event, marketing effort, etc.) connected to this Interaction. When the Additional Campaign Member Status field is also set, a Campaign Member will be created for the individual.</description>
    <inlineHelpText>Set the secondary campaign (event, marketing effort, etc.) connected to this Interaction to create another Campaign Member.</inlineHelpText>
    <label>Additional Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Interactions (Additional Campaign)</relationshipLabel>
    <relationshipName>Additional_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>