force-app/main/default/objects/Interaction__c/fields/Additional_Campaign_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Additional_Campaign_Member_Status__c</fullName>
    <description>The status that should be set on the Campaign Member created for the Additional Campaign. It must match an available status from the Additional Campaign, and it cannot be blank.</description>
    <inlineHelpText>Set the status for the Campaign Member created from the Additional Campaign.</inlineHelpText>
    <label>Additional Campaign Member Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Walk-In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>