force-app/main/default/objects/Interaction__c/fields/Affiliated_Account__c.field-meta.xml
<CustomField>
    <fullName>Affiliated_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The organizational account (Ex: business, high school, college, etc.) a student is affiliated with. This field along with the Affiliation Role, Affiliation Status, and Primary Affiliation fields creates an Affiliation to the Contact. Filtered to exclude the Administrative Account Record Type.</description>
    <inlineHelpText>Select the organizational account (Ex: business, high school, college, etc.) the individual is affiliated with.</inlineHelpText>
    <label>Affiliated Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Business Organization, Educational Institution, Sports Organization, University Department</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Interactions</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>