force-app/main/default/objects/Interaction__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The main campaign (event, marketing effort, etc.) connected to this Interaction. When the Campaign Member Status field is also set, a Campaign Member will be created for the individual.</description>
    <inlineHelpText>The main campaign (event, marketing effort, etc.) connected to this Interaction. When the Campaign Member Status field is also set, a Campaign Member will be created for the individual.</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Interactions</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>