force-app/main/default/objects/Interaction__c/fields/Campaign_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Status__c</fullName>
    <description>The status that should be set on the Campaign Member created for the Campaign. It must match an available status from the Campaign, and it cannot be blank.</description>
    <inlineHelpText>Select the member status that should be set for the Campaign. It must match an available status from the Campaign.</inlineHelpText>
    <label>Campaign Member Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Walk-In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>