force-app/main/default/objects/Interaction__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The contact created or updated by this Interaction, set by the Interaction Processor.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interactions</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>