force-app/main/default/objects/Interaction__c/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <description>Values are based on the HEDA Ethnicity field, which matches IPEDS standards.</description>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hispanic or Latino</fullName>
            </value>
            <value>
                <fullName>Not Hispanic or Latino</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>