force-app/main/default/objects/Interaction__c/fields/Interaction_Source__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Source__c</fullName>
    <description>The method by which the data is being added as an Interaction. Set to &quot;Manual Entry&quot; for hand entry, otherwise it represents the integration source (Webform, Purchase List, etc.) Also used in the Skip Mapping functionality on Interaction Mappings.</description>
    <label>Interaction Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual Entry</fullName>
                <default>true</default>
                <label>Manual Entry</label>
            </value>
            <value>
                <fullName>Purchase List</fullName>
            </value>
            <value>
                <fullName>Student Information System</fullName>
            </value>
            <value>
                <fullName>Webform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>