force-app/main/default/objects/Interaction__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <inlineHelpText>Required to create or update an Opportunity.</inlineHelpText>
    <label>Opportunity Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inquired</fullName>
                <default>true</default>
                <label>Inquired</label>
            </value>
            <value>
                <fullName>Confirmed Interest</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Evaluated</fullName>
            </value>
            <value>
                <fullName>Admitted</fullName>
            </value>
            <value>
                <fullName>Deposit Received</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>No Longer Interested</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>