force-app/main/default/objects/Interaction__c/fields/Primary_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Primary_Affiliation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the Affiliation created from Affiliated Account should be set to Primary.</description>
    <inlineHelpText>Check this box to indicate the Affiliated Account is the Contact&apos;s main affiliation for that Account type.</inlineHelpText>
    <label>Primary Affiliation</label>
    <type>Checkbox</type>
</CustomField>