force-app/main/default/objects/Interaction__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <description>Values are based on the HEDA Race field, which matches IPEDS standards.</description>
    <label>Race</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>American Indian or Alaska Native</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Black or African American</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>