force-app/main/default/objects/Interaction__c/fields/Recruitment_Interest__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The general interest the individual is inquiring about for marketing. A lookup to Plan with a filter criteria of Record Type = Recruitment.</description>
    <inlineHelpText>The general interest the individual is inquiring about for marketing.</inlineHelpText>
    <label>Recruitment Interest</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Plan__c.Type__c</field>
            <operation>equals</operation>
            <value>Recruitment</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Interactions with Recruitment Interest</relationshipLabel>
    <relationshipName>Recruitment_Interest_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>